# johnny-johnny-agent

./: .gitignore  README.md  mycroftai-roadmap.json  pyproject.toml
archive/: delete_all_project_issues.py
data/input/backlog/: Backlog-as-Code-Synchronization-Epic.md  backlog-v1-from-github.yml  backlog.yml
data/output/: johnny-metadata-backfill-plan.json
docs/examples/: backlog-complete-v1.yml  backlog-minimal-v1.yml
docs/johnny-johnny-architecture-adrs/: ADR-001-canonical-first.md  ADR-002-intent-based-commands.md  ADR-003-immediate-reconciliation.md  ADR-004-command-pipeline.md  ADR-005-planner-executor.md  ADR-006-provider-independence.md  ADR-007-stable-identity.md  ADR-008-provider-metadata.md  ADR-009-maintenance-commands.md  ADR-010-epic-ownership-v1.md  ADR-011-relationship-commands.md  ADR-012-grow-jj.md  ADR-013-command-files.md  ADR-014-playbooks.md  ADR-015-cli-first.md
docs/johnny-johnny-foundational-adrs/: ADR-101-why-canonical-first.md  ADR-102-why-planner-executor.md  ADR-103-why-immediate-reconciliation.md  ADR-104-intent-over-provider.md  ADR-105-grow-jj.md  ADR-106-command-language.md
docs/schemas/: backlog-v1.schema.json
docs/specifications/: backlog-v1.md
scripts/: create_johnny_metadata_backfill_plan.py
src/johnny_johnny_agent/: __main__.py  application.py
src/johnny_johnny_agent/api/: app.py
src/johnny_johnny_agent/capabilities/backlog_sync/: executor.py  loader.py  mutations.py  parser.py  planner.py  purge.py  validator.py  workflow.py  (+2 more)
src/johnny_johnny_agent/cli/: main.py
src/johnny_johnny_agent/domain/: backlog.py
(+7 files in other folders)
