[project]
name = "johnny-johnny-agent"
version = "0.1.0"
description = "Python runtime for the Johnny-Johnny personal engineering assistant."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "typer",
    "uvicorn",
    "pyyaml",
    "jsonschema",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "johnny_johnny_agent"
module-root = "src"

[project.scripts]
jj = "johnny_johnny_agent.cli.main:app"
johnny-johnny = "johnny_johnny_agent.cli.main:app"